// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiService getChains gets mainnet chains 1`] = `
[
  {
    "id": 1,
    "isMainnet": true,
    "name": "Ethereum",
  },
  {
    "id": 2,
    "isMainnet": true,
    "name": "Polkadot",
  },
  {
    "id": 3,
    "isMainnet": true,
    "name": "Bitcoin",
  },
]
`;

exports[`ApiService getChains gets testnet chains (perseverance) 1`] = `
[
  {
    "id": 1,
    "isMainnet": false,
    "name": "Ethereum",
  },
  {
    "id": 2,
    "isMainnet": false,
    "name": "Polkadot",
  },
  {
    "id": 3,
    "isMainnet": false,
    "name": "Bitcoin",
  },
]
`;

exports[`ApiService getChains gets testnet chains (sisyphos) 1`] = `
[
  {
    "id": 1,
    "isMainnet": false,
    "name": "Ethereum",
  },
  {
    "id": 2,
    "isMainnet": false,
    "name": "Polkadot",
  },
  {
    "id": 3,
    "isMainnet": false,
    "name": "Bitcoin",
  },
]
`;

exports[`ApiService getRoute gets a route with a quote 1`] = `
{
  "destAddress": "",
  "destChainId": 1,
  "destTokenSymbol": "ETH",
  "quote": {
    "egressAmount": "2",
    "id": "string",
    "intermediateAmount": "1",
  },
  "srcChainId": 3,
  "srcTokenSymbol": "BTC",
}
`;

exports[`ApiService getRoute gets a route with a quote 2`] = `
[
  "https://swapperoo.org/quote?amount=10000&srcAsset=BTC&destAsset=ETH",
  {
    "signal": undefined,
  },
]
`;

exports[`ApiService getTokens (perseverance) gets the correct tokens for testnets (1) 1`] = `
[
  {
    "chainId": 1,
    "contractAddress": "0xeth",
    "decimals": 18,
    "isMainnet": false,
    "name": "ether",
    "symbol": "ETH",
  },
  {
    "chainId": 1,
    "contractAddress": "0xusdc",
    "decimals": 6,
    "isMainnet": false,
    "name": "usdc",
    "symbol": "USDC",
  },
  {
    "chainId": 1,
    "contractAddress": "0xflip",
    "decimals": 18,
    "isMainnet": false,
    "name": "flip",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getTokens (perseverance) gets the correct tokens for testnets (2) 1`] = `
[
  {
    "chainId": 2,
    "contractAddress": "0xdot",
    "decimals": 10,
    "isMainnet": false,
    "name": "dot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getTokens (perseverance) gets the correct tokens for testnets (3) 1`] = `
[
  {
    "chainId": 3,
    "contractAddress": "0xbitcoin",
    "decimals": 8,
    "isMainnet": false,
    "name": "bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getTokens (sisyphos) gets the correct tokens for testnets (1) 1`] = `
[
  {
    "chainId": 1,
    "contractAddress": "0xeth",
    "decimals": 18,
    "isMainnet": false,
    "name": "ether",
    "symbol": "ETH",
  },
  {
    "chainId": 1,
    "contractAddress": "0xusdc",
    "decimals": 6,
    "isMainnet": false,
    "name": "usdc",
    "symbol": "USDC",
  },
  {
    "chainId": 1,
    "contractAddress": "0xflip",
    "decimals": 18,
    "isMainnet": false,
    "name": "flip",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getTokens (sisyphos) gets the correct tokens for testnets (2) 1`] = `
[
  {
    "chainId": 2,
    "contractAddress": "0xdot",
    "decimals": 10,
    "isMainnet": false,
    "name": "dot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getTokens (sisyphos) gets the correct tokens for testnets (3) 1`] = `
[
  {
    "chainId": 3,
    "contractAddress": "0xbitcoin",
    "decimals": 8,
    "isMainnet": false,
    "name": "bitcoin",
    "symbol": "BTC",
  },
]
`;

exports[`ApiService getTokens gets the correct tokens for mainnets (1) 1`] = `
[
  {
    "chainId": 1,
    "contractAddress": "0xeth",
    "decimals": 18,
    "isMainnet": true,
    "name": "ether",
    "symbol": "ETH",
  },
  {
    "chainId": 1,
    "contractAddress": "0xusdc",
    "decimals": 6,
    "isMainnet": true,
    "name": "usdc",
    "symbol": "USDC",
  },
  {
    "chainId": 1,
    "contractAddress": "0xflip",
    "decimals": 18,
    "isMainnet": true,
    "name": "flip",
    "symbol": "FLIP",
  },
]
`;

exports[`ApiService getTokens gets the correct tokens for mainnets (2) 1`] = `
[
  {
    "chainId": 2,
    "contractAddress": "0xdot",
    "decimals": 10,
    "isMainnet": true,
    "name": "dot",
    "symbol": "DOT",
  },
]
`;

exports[`ApiService getTokens gets the correct tokens for mainnets (3) 1`] = `
[
  {
    "chainId": 3,
    "contractAddress": "0xbitcoin",
    "decimals": 8,
    "isMainnet": true,
    "name": "bitcoin",
    "symbol": "BTC",
  },
]
`;
